Change run files to run from jar files; gitignore manipulation 2

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ sim/target/maven-status
 transfer/target/generated-sources
 transfer/target/maven-archiver
 transfer/target/maven-status
+/scada/target/maven-status
+/scada/target/maven-archiver
+/scada/target/classes
+/transfer/target/maven-archiver
+/transfer/target/maven-status
+/sim/target/classes
