--- a/oms/pom.xml
+++ b/oms/pom.xml
@@ -13,6 +13,7 @@
     <tiles.version>3.0.8</tiles.version>
     <mybatis.version>3.4.5</mybatis.version>
     <mysql.connector.version>5.1.30</mysql.connector.version>
+    <fasterxml.jackson.version>2.9.7</fasterxml.jackson.version>
   </properties>
   
   <dependencies>
@@ -59,17 +60,17 @@
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
-        <version>2.2.3</version>
+        <version>${fasterxml.jackson.version}</version>
     </dependency>
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>2.2.3</version>
+        <version>${fasterxml.jackson.version}</version>
     </dependency>
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
-        <version>2.2.3</version>
+        <version>${fasterxml.jackson.version}</version>
     </dependency>
     
     <!-- myBatis dependency -->
