--- a/ui/package.json
+++ b/ui/package.json
@@ -3,34 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "acorn": "^6.1.1",
-    "ajv": "^6.10.0",
+    "acorn": "^7.1.0",
+    "ajv": "^6.10.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.19.0",
     "braces": "^3.0.2",
     "cors": "^2.8.5",
-    "d3-shape": "^1.3.5",
+    "d3-shape": "^1.3.7",
     "debug": "^4.1.1",
-    "enzyme": "^3.10.0",
+    "enzyme": "^3.11.0",
     "kleur": "^3.0.3",
-    "konva": "^3.3.3",
+    "konva": "^4.1.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-calendar": "^2.19.0",
+    "react": "^16.12.0",
+    "react-calendar": "^2.19.2",
     "react-datetime": "^2.16.3",
-    "react-datetime-picker": "^2.4.0",
-    "react-dom": "^16.8.6",
-    "react-konva": "^16.8.7-2",
-    "react-moment": "^0.9.2",
-    "react-scripts": "^3.0.1",
+    "react-datetime-picker": "^2.8.0",
+    "react-dom": "^16.12.0",
+    "react-konva": "^16.10.1-0",
+    "react-moment": "^0.9.7",
+    "react-scripts": "^3.3.0",
     "react-start": "^1.1.2",
-    "recharts": "^1.6.2",
-    "resolve": "^1.11.1",
-    "typescript": "^3.5.1",
-    "victory": "^32.2.3"
+    "recharts": "^2.0.0-beta.1",
+    "resolve": "^1.14.1",
+    "typescript": "^3.7.4",
+    "victory": "^34.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
