--- a/watchdog/pom.xml
+++ b/watchdog/pom.xml
@@ -166,7 +166,23 @@
           <excludePackageNames> *.impl </excludePackageNames>
         </configuration>
       </plugin>
-    </plugins>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <configuration>
+              <tasks>
+                <copy file="target/watchdog.jar" tofile="../exec/watchdog.jar" />
+              </tasks>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+        </plugin>
+     </plugins>
   </build>
 
 </project>
